# cleanscan

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  release-please-config.json
.github/workflows/: ci.yml  conventional-commits.yml  release.yml
src/: adaptive.rs  colo.rs  colo_db.json  config.rs  main.rs  proxy.rs  scanner.rs  speed.rs  system_info.rs  tui.rs  updater.rs  watch.rs
src/tui/: clipboard.rs  dashboard.rs  help.rs  mod.rs  speed.rs  theme.rs  widgets.rs  wizard.rs
tests/: install_detection.sh
