[package]
name = "cleanscan"
version = "0.15.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ipnet = "2"
rand = "0.8"
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "rustls", "stream"] }
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
tui-slider = "0.3.2"
tui-overlay = "0.1.2"
tui-checkbox = "0.4.6"
