[package]
name = "cleanscan"
version = "0.26.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ipnet = "2"
rand = "0.8"
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "json", "rustls", "stream"] }
semver = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
rustls = "0.23.42"
tokio-rustls = "0.26.4"
url = "2"
rustls-platform-verifier = "0.7.0"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
tui-slider = "0.3.2"
tui-overlay = "0.1.2"
tui-checkbox = "0.4.6"
